--- a/Population_History/02_find_callable_regions/find_callable_regions_config.json
+++ b/Population_History/02_find_callable_regions/find_callable_regions_config.json
@@ -1,6 +1,9 @@
 {
   "extract_stats_from_vcf_script": "/home/tphung3/softwares/tanya_repos/vcfhelper/extract_stats_from_vcf.py",
   "compute_sum_DP_script": "/scratch/tphung3/Kenya_Selection_and_Demography/Population_History/02_find_callable_regions/compute_sumDP_per_chromosome.R",
+  "gatk4_path": "/home/tphung3/softwares/gatk-4.1.8.1/gatk",
+  "ref": "/data/CEM/wilsonlab/from_collaborators/princeton_kenya/reference/amanda/hg38_all_chr.fa",
+  "all_sites_vcf_dir": "/data/CEM/wilsonlab/from_collaborators/princeton_kenya/vcf/high_coverage_all_sites/",
   "autosomes": ["1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22"]
 
 }
