--- a/Population_History/02_find_callable_regions/find_callable_regions_config.json
+++ b/Population_History/02_find_callable_regions/find_callable_regions_config.json
@@ -6,5 +6,6 @@
   "all_sites_vcf_dir": "/data/CEM/wilsonlab/from_collaborators/princeton_kenya/vcf/high_coverage_all_sites/",
   "autosomes": ["1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22"],
   "calc_num_sites_in_vcf_script": "/home/tphung3/softwares/tanya_repos/vcfhelper/calc_num_site_in_vcf.py",
-  "neutral_regions_dir": "/scratch/tphung3/Turkana_Sex_Demography/04_find_neutral_regions/results/"
+  "neutral_regions_dir": "/scratch/tphung3/Turkana_Sex_Demography/04_find_neutral_regions/results/",
+  "nre_neutral_regions_dir": "/scratch/tphung3/Kenya_Selection_and_Demography/Population_History/01_find_neutral_regions/download/"
 }
